Mobile responsive : fixed gap between "Activites" cards

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -125,7 +125,6 @@
 
     .activitesCardsContainer{
         flex-direction: column;
-        gap: 15px;
     }
 
     .activites a {
